2007-02-09        svu

	* sql/ResultSetPanel.java: Stop requerying when result set panel is
	closed

2007-02-05        svu

	* SqlPlugin.props: bumping plugin version, as requested

2007-02-02        svu

	* SqlPlugin.props, sql/ResultSetPanel.java,
	sql/options/GeneralOptionPane.java: make requery period configurable

2007-02-01        svu

	* sql/SqlTextPublisher.java, sql/ResultSetWindow.java: requerying
	result set actuall works now
	* SqlPlugin.props, sql/ResultSetWindowPopup.java,
	sql/ResultSetPanel.java, sql/options/GeneralOptionPane.java,
	sql/SqlPlugin.java, sql/SqlTextPublisher.java,
	sql/ResultSetWindow.java: splitting ResultSetPanel, periodic
	requerying works now (with hardcoded interval, so far)

2007-01-30        svu

	* SqlPlugin.props, sql/SqlTextPublisher.java,
	sql/ResultSetWindow.java: adding repeat query button to the result
	window, putting the query text into the table data model (RSW.Data
	class)
	* icons/repeatSameQuery.png, icons/closebox.png, icons/closebox.gif:
	getting rid of .gif icon, adding tiny icon for the repeat query button
	on the ResultSetWindow

2007-01-25        svu

	* sql/ResultSetWindowPopup.java, sql/SqlTextPublisher.java,
	sql/ResultSetWindow.java, sql/SqlServerType.java: using proper
	server-specific formatting for ResultSetWindow (including clipboard
	operations)
	* sql/ResultSetWindow.java: improving tooltips, providing query
	name as tab tooltip, server type as server name tooltip
	* sql/ResultSetWindowPopup.java, sql/ResultSetWindow.java: getting rid
	of redundant ResultSetWindow.TableModel class - the Data class can do
	it all

2007-01-24        svu

	* sql/ResultSetWindow.java, sql/SqlServerType.java: keeping actual
	objects in the result set window (for a moment - without proper
	formatting, TODO)

2007-01-23        svu

	* sql/SqlTextPublisher.java, sql/ResultSetWindow.java: using proper
	server name (not the currently selected one - it works incorrectly for
	VFS).