@@ -1,3 +1,8 @@
+2007-02-28        svu
+
+	* sql/ResultSetPanel.java: Fixed record count label update (the
+	previous label was not being hidden)
+
 2007-02-09        svu
 
 	* sql/ResultSetPanel.java: Stop requerying when result set panel is
